# ELDNet

./: .gitignore  CMakeLists.txt  ELDNet_test.prototxt  README.md  test_main.cpp
caffe/: CMakeLists.txt
caffe/cmake/: Dependencies.cmake
caffe/include/ORUtils/: Vector.h  gSLICr_defines.h
caffe/include/caffe/layers/: euclidean_loss_layer.hpp  gen_slicinfo_layer.hpp  lowlevel_distance_layer.hpp
caffe/src/caffe/: blob.cpp  data_transformer.cpp  net.cpp
caffe/src/caffe/layers/: euclidean_loss_layer.cpp  euclidean_loss_layer.cu  gen_slicinfo_layer.cpp  gen_slicinfo_layer.cu  image_data_layer.cpp  lowlevel_distance_layer.cpp  lowlevel_distance_layer.cu  sigmoid_cross_entropy_loss_layer.cpp
caffe/src/caffe/proto/: caffe.proto
caffe/src/caffe/util/: io.cpp  math_functions.cpp
training/: asd_label.txt  asd_list.txt  log_GoogLeNet_Conv_1  train.prototxt
